# cmusic

./: API.md  CMakeLists.txt  README.md
include/: cjson-converters.h  fetch.h  helpers.h  ptrarray.h  query.h  readers.h  tmem.h  tprint.h  type-handlers.h  types.h
src/: cjson-converters.c  fetch.c  helpers.c  main.c  ptrarray.c  query.c  readers.c  tmem.c  tprint.c  type-handlers.c
tests/: CMakeLists.txt  cjson-converters.c  fetch.c  fetch.cpp  main.cpp  ptrarray.c  readers.c  tmem.c  tprint.c
